--- a/toy-java/pom.xml
+++ b/toy-java/pom.xml
@@ -27,6 +27,11 @@
 
     <artifactId>toy-java</artifactId>
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources/</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
