--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
         <module>toy-common</module>
         <module>toy-java</module>
         <module>toy-hdfs</module>
-      <module>toy-phoenix</module>
+        <module>toy-phoenix</module>
+        <module>toy-kafka</module>
     </modules>
 
 
