--- a/toy-common/pom.xml
+++ b/toy-common/pom.xml
@@ -66,7 +66,12 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>1.4.9</version>
+            <version>1.4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.phoenix</groupId>
+            <artifactId>phoenix-client</artifactId>
+            <version>4.15.0-HBase-1.4</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
