--- a/aries-common/pom.xml
+++ b/aries-common/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>aries</artifactId>
         <groupId>org.rc</groupId>
-        <version>0.1</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
