--- a/aries-phoenix/pom.xml
+++ b/aries-phoenix/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>aries</artifactId>
     <groupId>org.rc</groupId>
-    <version>0.1</version>
+    <version>${revision}</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>org.rc</groupId>
       <artifactId>aries-common</artifactId>
-      <version>0.1</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 </project>
