--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <groupId>org.rc</groupId>
     <artifactId>aries</artifactId>
     <packaging>pom</packaging>
-    <version>0.1</version>
+    <version>${revision}</version>
+
     <modules>
         <module>aries-hbase</module>
         <module>aries-common</module>
@@ -17,5 +18,8 @@
         <module>aries-kafka</module>
     </modules>
 
+    <properties>
+        <revision>0.2</revision>
+    </properties>
 
 </project>
