--- a/conf/logging.properties
+++ b/conf/logging.properties
@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *     http.//www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -14,31 +14,7 @@
  * limitations under the License.
  */
 
-package org.apache.aries;
-
-import java.io.PrintStream;
-
-/**
- * Definition of a toy.
- */
-public interface Toy {
-
-  /**
-   * Initialzation before playing toy.
-   */
-  void init();
-
-  /**
-   * How to play toy.
-   */
-  int howToPlay();
-
-  /**
-   * Because it is a toy, as it is name, exceptions are handled casually.
-   * @param dir_of_conf_file
-   * @return a code to denote success or failure
-   * @throws Exception
-   */
-  int play(String dir_of_conf_file) throws Exception;
-
-}
+handlers = java.util.logging.ConsoleHandler
+java.util.logging.ConsoleHandler.level = INFO
+java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$s] %5$s %n
