--- a/aries-hbase/pom.xml
+++ b/aries-hbase/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>aries-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
     </dependencies>
 
 </project>
