--- a/aries-common/pom.xml
+++ b/aries-common/pom.xml
@@ -67,11 +67,13 @@
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
             <version>1.4.12</version>
+	    <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.phoenix</groupId>
             <artifactId>phoenix-client</artifactId>
             <version>4.15.0-HBase-1.4</version>
+	    <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
