HDFS Benchmark basic

--- a/aries-hbase/pom.xml
+++ b/aries-hbase/pom.xml
@@ -56,6 +56,7 @@
             <groupId>org.rc</groupId>
             <artifactId>aries-common</artifactId>
             <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
