--- a/aries-java/pom.xml
+++ b/aries-java/pom.xml
@@ -49,6 +49,7 @@
             <groupId>org.rc</groupId>
             <artifactId>aries-common</artifactId>
             <version>${project.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
