--- a/aries-phoenix/pom.xml
+++ b/aries-phoenix/pom.xml
@@ -72,6 +72,7 @@
       <groupId>org.rc</groupId>
       <artifactId>aries-common</artifactId>
       <version>${project.version}</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
