--- a/aries-hbase/pom.xml
+++ b/aries-hbase/pom.xml
@@ -53,6 +53,11 @@
             <version>1.4.12</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>1.4.12</version>
+        </dependency>
+        <dependency>
             <groupId>org.rc</groupId>
             <artifactId>aries-common</artifactId>
             <version>${project.version}</version>
